data/derived/comb/progs/unify/prog0870.ml.out
Characters 182-208:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
